--- a/views/Hr/viewemp_accountant.ejs
+++ b/views/Hr/viewemp_accountant.ejs
@@ -119,7 +119,7 @@
                                     else{%>
                                     <%=users[i].department%>
                                     <%}%></td>
-                                <td><%if(!users[i].designation){%>
+                                <td><%if(!users[i].designation){%> 
                                     <%="N/A"%>
                                     <%
                                     }
@@ -133,6 +133,20 @@
                                         <tr class="tr_option">
                                             <input type="hidden" id="<%= users[i]._id %>" name="<%= salary[i].bonus %>"
                                                    value="<%= salary[i].salary %>">
+<!-- PART OF: 3) HR should have a ablibity to mark attandence for any employee -->
+                                            <td style="padding: 0%;" style="padding: 0%;">
+                                                <button 
+                                                    data-toggle="modal"
+                                                    data-target="#myModal6"
+                                                    class="mark-button" 
+                                                    id="<%= users[i]._id %>">
+                                                        <i  
+                                                            class="fa fa-check-circle"
+                                                            title="Mark Employee Attendance"
+                                                            aria-hidden="true">
+                                                        </i>
+                                                </button>
+                                            </td>
 
                                             <td class="td_option" style="padding: 0%;">
                                                 <button class="user_salary_modal" data-toggle="modal"
@@ -266,6 +280,18 @@
                             .draw();
                 }
             });
+        });
+    });
+</script>
+
+<!-- PART OF: 3) HR should have a ablibity to mark attandence for any employee -->
+<script>
+    var markEmployeeId;
+
+    $(document).ready(function () {
+        $(document).on("click", ".mark-button", function () {
+            markEmployeeId = (this.id);
+            document.getElementById("modal-mark-form").action = "/hr-manager/mark-attendance-employee/" + markEmployeeId;
         });
     });
 </script>
@@ -439,6 +465,30 @@
             </form>
         </div>
 
+    </div>
+</div>
+
+<!-- PART OF: 3) HR should have a ablibity to mark attandence for any employee -->
+<div id="myModal6" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <form id="modal-mark-form" method="post" action="">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Mark Employee Attendance</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to mark employee's attendance.</p>
+                </div>
+                <div class="modal-footer">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">                   
+                    <button type="reset" class="btn btn-default" data-dismiss="modal">No</button>
+                    <button type="submit" class="btn btn-default">Yes</button>
+                </div>
+
+            </div>
+        </form>
     </div>
 </div>
 </html>
