--- a/views/Employee/applyForLeave.ejs
+++ b/views/Employee/applyForLeave.ejs
@@ -42,6 +42,10 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+            <li data-toggle="modal" data-target="#myModalMonthly">
+                <a href="#"><span class="fa-stack fa-lg pull-left"><i
+                                class="fa fa-dashboard fa-stack-1x "></i></span> View Monthly profile</a>
+            </li>
 
             <li>
                 <a href="/employee/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
@@ -150,6 +154,12 @@
             $('#year').append($('<option />').val(i).html(i));
         }
     });
+
+    $(document).ready(function () {
+        for (i = new Date().getFullYear(); i > 1900; i--) {
+            $('#yearForMonthly').append($('<option />').val(i).html(i));
+        }
+    });
 </script>
 </body>
 <div id="myModal2" class="modal fade" role="dialog">
@@ -206,6 +216,51 @@
                     <div class="form-group">
                         <label for="year">Year:</label>
                         <select class="form-control" id="year" name="year">
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button type="reset" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-default">View</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
+
+<div id="myModalMonthly" class="modal fade" role="dialog"> 
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <form method="post" action="/employee/view-monthly-profile">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Select Month/Year</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="Month">Month:</label>
+                        <select class="form-control" id="month" name="month">
+                            <option value="1">January</option>
+                            <option value="2">February</option>
+                            <option value="3">March</option>
+                            <option value="4">April</option>
+                            <option value="5">May</option>
+                            <option value="6">June</option>
+                            <option value="7">July</option>
+                            <option value="8">August</option>
+                            <option value="9">September</option>
+                            <option value="10">October</option>
+                            <option value="11">November</option>
+                            <option value="12">December</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="yearForMonthly">Year:</label>
+                        <select class="form-control" id="yearForMonthly" name="year">
                         </select>
                     </div>
                 </div>
